# gltut-lab

./: CMakeLists.txt  README.md
Tut 01 Hello Triangle/: Tut1.cpp
Tut 02 Playing with Colors/: FragPosition.cpp
Tut 02 Playing with Colors/data/: FragPosition.frag  FragPosition.vert  VertexColors.frag
Tut 03 OpenGLs Moving Triangle/: VertCalcOffset.cpp
Tut 03 OpenGLs Moving Triangle/data/: calcColor.frag
Tut 05 Objects in Depth/: DepthBuffer.cpp
Tut 06 Objects in Motion/: Exercise.cpp  Hierarchy.cpp  HierarchyNoMStack.cpp  HierarchyRewritten.cpp  Practice.cpp  Rotations.cpp  Scale.cpp  Translation.cpp
Tut 06 Objects in Motion/data/: Practice.vert
Tut 07 World in Motion/: FoldedMatrix.cpp  FoldedMatrix2.cpp
Tut 07 World in Motion/data/: Tut072PosColorWorldTransformUBO.vert  Tut072PosOnlyWorldTransformUBO.vert  Tut07PosColorWorldTransformUBO.vert  Tut07PosOnlyWorldTransformUBO.vert
Tut 08 Getting Oriented/: CameraRelative.cpp  Ex1.cpp  GimbalLock.cpp  Interpolation.cpp  QuaternionYPR.cpp
Tut 09 Lights on/: AmbientLighting.cpp  BasicLighting.cpp  ScaleAndLighting.cpp
framework/: framework.cpp
glsdk/freeglut/include/GL/: freeglut_std.h
